--- a/IdeaSlotApp/UI/Storyboard/Idea/IdeaSlotPickerView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Idea/IdeaSlotPickerView.xib
@@ -13,21 +13,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="IdeaSlotPicker" id="iN0-l3-epB" customClass="IdeaSlotPickerView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="203" height="266"/>
+            <rect key="frame" x="0.0" y="0.0" width="190" height="280"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ln-G9-TTa">
-                    <rect key="frame" x="0.0" y="0.0" width="203" height="266"/>
+                    <rect key="frame" x="0.0" y="0.0" width="190" height="280"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SnK-9o-183">
-                            <rect key="frame" x="26" y="8" width="150" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SnK-9o-183">
+                            <rect key="frame" x="20" y="8" width="150" height="30"/>
                             <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="showDropDown:" destination="iN0-l3-epB" eventType="touchUpInside" id="wHa-Kj-HGN"/>
+                            </connections>
                         </button>
                         <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e7e-4u-8BZ">
-                            <rect key="frame" x="8" y="46" width="187" height="162"/>
+                            <rect key="frame" x="0.0" y="59" width="190" height="162"/>
                         </pickerView>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goE-oQ-bY0">
-                            <rect key="frame" x="76" y="216" width="50" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goE-oQ-bY0">
+                            <rect key="frame" x="80" y="242" width="30" height="30"/>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="playButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="ywx-7N-GhA"/>
@@ -35,23 +38,23 @@
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="SnK-9o-183" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leading" constant="26" id="9zn-UT-DEs"/>
-                        <constraint firstItem="SnK-9o-183" firstAttribute="top" secondItem="6ln-G9-TTa" secondAttribute="topMargin" id="I1j-vO-yGu"/>
-                        <constraint firstItem="goE-oQ-bY0" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leading" constant="76" id="R11-bd-Lpe"/>
-                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="centerX" secondItem="goE-oQ-bY0" secondAttribute="centerX" id="T3D-8t-5Ce"/>
-                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="top" secondItem="SnK-9o-183" secondAttribute="bottom" constant="8" symbolic="YES" id="XJl-9f-qfo"/>
-                        <constraint firstItem="goE-oQ-bY0" firstAttribute="top" secondItem="e7e-4u-8BZ" secondAttribute="bottom" constant="8" symbolic="YES" id="Z51-7N-3Vv"/>
-                        <constraint firstItem="SnK-9o-183" firstAttribute="centerX" secondItem="e7e-4u-8BZ" secondAttribute="centerX" id="mwH-hl-YC5"/>
-                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="trailing" secondItem="6ln-G9-TTa" secondAttribute="trailingMargin" id="nxm-yJ-kG8"/>
-                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leadingMargin" id="uJV-Fw-ZfP"/>
+                        <constraint firstAttribute="trailing" secondItem="e7e-4u-8BZ" secondAttribute="trailing" id="4YN-9k-evE"/>
+                        <constraint firstItem="goE-oQ-bY0" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leading" constant="80" id="BHw-Fh-p5e"/>
+                        <constraint firstItem="goE-oQ-bY0" firstAttribute="bottom" secondItem="6ln-G9-TTa" secondAttribute="bottomMargin" id="Bz0-xI-Sgr"/>
+                        <constraint firstItem="SnK-9o-183" firstAttribute="top" secondItem="6ln-G9-TTa" secondAttribute="topMargin" id="M4E-BU-l1T"/>
+                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leading" id="Nvu-Uh-Ris"/>
+                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="centerX" secondItem="goE-oQ-bY0" secondAttribute="centerX" id="WXO-hz-Ig1"/>
+                        <constraint firstItem="e7e-4u-8BZ" firstAttribute="centerY" secondItem="6ln-G9-TTa" secondAttribute="centerY" id="gWI-Na-BnZ"/>
+                        <constraint firstItem="SnK-9o-183" firstAttribute="centerX" secondItem="e7e-4u-8BZ" secondAttribute="centerX" id="gf2-X1-a2n"/>
+                        <constraint firstItem="SnK-9o-183" firstAttribute="leading" secondItem="6ln-G9-TTa" secondAttribute="leading" constant="20" id="jas-yG-deh"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstItem="6ln-G9-TTa" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="VUh-Gf-Gmn"/>
-                <constraint firstAttribute="trailing" secondItem="6ln-G9-TTa" secondAttribute="trailing" id="a7o-Vi-Deh"/>
-                <constraint firstItem="6ln-G9-TTa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="unk-CU-8Es"/>
-                <constraint firstItem="6ln-G9-TTa" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="xf5-oD-Ibz"/>
+                <constraint firstItem="6ln-G9-TTa" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Qg6-YQ-Wid"/>
+                <constraint firstAttribute="trailing" secondItem="6ln-G9-TTa" secondAttribute="trailing" id="Qok-aQ-4bV"/>
+                <constraint firstItem="6ln-G9-TTa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UKg-Xr-b5q"/>
+                <constraint firstItem="6ln-G9-TTa" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="q2M-DF-OSf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -61,7 +64,7 @@
                 <outlet property="playButton" destination="goE-oQ-bY0" id="JaN-AC-A6u"/>
                 <outlet property="wordsPickerView" destination="e7e-4u-8BZ" id="oRZ-5k-xbs"/>
             </connections>
-            <point key="canvasLocation" x="-95.200000000000003" y="46.776611694152926"/>
+            <point key="canvasLocation" x="-105.59999999999999" y="53.073463268365821"/>
         </view>
     </objects>
 </document>
