--- a/IdeaSlotApp/UI/Storyboard/Category/CategoryRegistFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Category/CategoryRegistFormView.xib
@@ -13,70 +13,50 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="CategoryRegistForm" id="iN0-l3-epB" customClass="CategoryRegistFormView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d06-mZ-fO6">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
+                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d06-mZ-fO6">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
-                            <rect key="frame" x="112.5" y="112" width="175" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="175" id="HE2-8g-eNM"/>
-                                <constraint firstAttribute="height" constant="30" id="obF-sk-HK4"/>
-                            </constraints>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Regist Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-2D-VY5">
-                            <rect key="frame" x="25" y="8" width="180" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="180" id="aiV-XY-yRr"/>
-                            </constraints>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Register Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-2D-VY5">
+                            <rect key="frame" x="25" y="8" width="205" height="38"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
-                            <rect key="frame" x="25" y="60" width="350" height="30"/>
+                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
+                            <rect key="frame" x="25" y="73" width="350" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVp-9q-eXd">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVp-9q-eXd">
                             <rect key="frame" x="372" y="17" width="20" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="20" id="7Q7-TX-aWQ"/>
-                                <constraint firstAttribute="height" constant="20" id="ZBe-dF-9rl"/>
-                            </constraints>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="CloseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5UO-nF-KaO"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
+                            <rect key="frame" x="113" y="150" width="175" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="d06-mZ-fO6" secondAttribute="topMargin" id="6eX-uw-JwF"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="d06-mZ-fO6" secondAttribute="leading" constant="25" id="6zH-d0-6yq"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="b3Y-xB-bIs" secondAttribute="leading" id="Cvc-3a-4tf"/>
-                        <constraint firstAttribute="bottom" secondItem="2IP-ef-nDl" secondAttribute="bottom" constant="8" id="DhX-Ad-XqI"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerX" secondItem="d06-mZ-fO6" secondAttribute="centerX" id="OWK-Ww-FBA"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="rVp-9q-eXd" secondAttribute="bottom" constant="23" id="Qkw-oz-p4f"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="dqh-2D-VY5" secondAttribute="bottom" constant="14" id="Sjr-Dj-Fcm"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="rVp-9q-eXd" secondAttribute="top" constant="-9" id="X95-8f-WfQ"/>
-                        <constraint firstItem="rVp-9q-eXd" firstAttribute="trailing" secondItem="b3Y-xB-bIs" secondAttribute="trailing" constant="17" id="bPL-2q-slw"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerX" secondItem="2IP-ef-nDl" secondAttribute="centerX" id="fd7-jd-ADZ"/>
-                        <constraint firstItem="2IP-ef-nDl" firstAttribute="top" secondItem="b3Y-xB-bIs" secondAttribute="bottom" constant="22" id="w7j-Cv-UXB"/>
+                        <constraint firstAttribute="width" secondItem="d06-mZ-fO6" secondAttribute="height" multiplier="2:1" id="i5o-1q-Kut"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstItem="d06-mZ-fO6" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="8xS-qy-h5B"/>
-                <constraint firstAttribute="trailing" secondItem="d06-mZ-fO6" secondAttribute="trailing" id="Pi3-gG-8yH"/>
-                <constraint firstItem="d06-mZ-fO6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Z1N-R2-06H"/>
-                <constraint firstItem="d06-mZ-fO6" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="zsR-Xk-t8D"/>
+                <constraint firstItem="d06-mZ-fO6" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="cee-aS-RJj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -86,7 +66,7 @@
                 <outlet property="registButton" destination="2IP-ef-nDl" id="wzh-DR-OLx"/>
                 <outlet property="textFrom" destination="b3Y-xB-bIs" id="G9f-61-Qdw"/>
             </connections>
-            <point key="canvasLocation" x="243.19999999999999" y="-104.34782608695653"/>
+            <point key="canvasLocation" x="201.59999999999999" y="-83.658170914542737"/>
         </view>
     </objects>
 </document>
