--- a/IdeaSlotApp/UI/Storyboard/Word/WordItemView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Word/WordItemView.xib
@@ -13,32 +13,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="WordItem" id="iN0-l3-epB" customClass="WordItemView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYl-xB-6Va">
-                    <rect key="frame" x="16" y="11" width="191" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYl-xB-6Va">
+                    <rect key="frame" x="21" y="10" width="195" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89p-EQ-4AA">
-                    <rect key="frame" x="235" y="7" width="129" height="38"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89p-EQ-4AA">
+                    <rect key="frame" x="224" y="8" width="129" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="89p-EQ-4AA" secondAttribute="height" multiplier="129:34" id="ZVU-YE-Jri"/>
+                        <constraint firstAttribute="width" constant="129" id="tpk-iC-YL9"/>
+                    </constraints>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="showDropdown:" destination="iN0-l3-epB" eventType="touchUpInside" id="vQa-IL-wrf"/>
                     </connections>
                 </button>
             </subviews>
+            <constraints>
+                <constraint firstItem="89p-EQ-4AA" firstAttribute="leading" secondItem="SYl-xB-6Va" secondAttribute="trailing" constant="8" symbolic="YES" id="F4P-6N-UTI"/>
+                <constraint firstItem="SYl-xB-6Va" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="21" id="I0f-rM-ow6"/>
+                <constraint firstItem="89p-EQ-4AA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="Prg-17-qfS"/>
+                <constraint firstItem="SYl-xB-6Va" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bXu-l3-SM4"/>
+                <constraint firstItem="SYl-xB-6Va" firstAttribute="centerY" secondItem="89p-EQ-4AA" secondAttribute="centerY" id="bhn-gp-uG9"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="89p-EQ-4AA" secondAttribute="trailing" constant="22" id="oyh-ML-Fr2"/>
+                <constraint firstItem="SYl-xB-6Va" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="rpQ-85-eJ0"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="categorybutton" destination="89p-EQ-4AA" id="Fgf-0w-YPK"/>
                 <outlet property="textfield" destination="SYl-xB-6Va" id="eGk-O4-DHj"/>
             </connections>
-            <point key="canvasLocation" x="-44" y="-143.47826086956522"/>
+            <point key="canvasLocation" x="-44" y="-143.92803598200899"/>
         </view>
     </objects>
 </document>
